--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,6 +44,7 @@ dependencies {
 
     // DI
     implementation "com.google.dagger:hilt-android:$dagger_version"
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
     kapt "com.google.dagger:hilt-compiler:$dagger_version"
 
     testImplementation 'junit:junit:4.13.2'
