--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,25 +5,27 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
+            android:name=".MyAndroidArchitectureApplication"
             android:allowBackup="true"
             android:icon="@mipmap/ic_launcher"
             android:label="@string/app_name"
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
-            android:name=".MyAndroidArchitectureApplication"
             android:theme="@style/Theme.MyAndroidArchitecture">
-
+        <activity
+                android:name=".screens.questiondetails.QuestionDetailsActivity"
+                android:exported="false"
+                android:theme="@style/Theme.MyAndroidArchitecture.NoActionBar" />
         <activity
                 android:name=".screens.questionslist.QuestionsListActivity"
-                android:theme="@style/Theme.MyAndroidArchitecture.NoActionBar"
-                android:exported="true">
+                android:exported="true"
+                android:theme="@style/Theme.MyAndroidArchitecture.NoActionBar">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
+                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER"/>
+                <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
     </application>
 
 </manifest>
